--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-timezone-select": "^1.3.2",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
